# qml-drag-drop-app

./: AssignmentItemRow.qml  AssignmentMode.qml  CMakeLists.txt  README.md  main.cpp  main.qml  resources.qrc
backend_component/: AssignmentItem.cpp  AssignmentItem.h  AssignmentItemList.cpp  AssignmentItemList.h  ImageProvider.cpp  ImageProvider.h
